--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -69,29 +69,29 @@ header {
 /*# sourceMappingURL=style.css.map */
 
 
-#icon-bar {
+.icon-bar {
   position: absolute;
   bottom: 0%;
   height: 210px;
   width: 100%; }
-  #icon-bar #icon-bar_borders {
+  .icon-bar .icon-bar_borders {
     left: 50%;
     transform: translatex(-50%);
     -webkit-transform: translatex(-50%);
     position: absolute;
     height: 100%;
     width: 720px; }
-    #icon-bar #icon-bar_borders #icon-bar_title-wrapper {
+    .icon-bar .icon-bar_borders .icon-bar_title-wrapper {
       top: 50%;
       transform: translateY(-50%);
       -webkit-transform: translateY(-50%);
       position: relative;
       height: 54px;
       width: 75%; }
-      #icon-bar #icon-bar_borders #icon-bar_title-wrapper .icon-bar_title-item:hover {
+      .icon-bar .icon-bar_borders .icon-bar_title-wrapper .icon-bar_title-item:hover {
         box-shadow: inset 0px 0px 20px 30px, 0px 3px 5px black;
         text-shadow: 0px 3px 5px black; }
-      #icon-bar #icon-bar_borders #icon-bar_title-wrapper .icon-bar_title-item {
+      .icon-bar .icon-bar_borders .icon-bar_title-wrapper .icon-bar_title-item {
         transition-duration: 1s;
         font-family: 'Futura';
         -webkit-box-sizing: border-box;
@@ -103,7 +103,7 @@ header {
         border-radius: 50%;
         border: 4px solid white;
         float: left; }
-        #icon-bar #icon-bar_borders #icon-bar_title-wrapper .icon-bar_title-item .icon-bar_title {
+        .icon-bar .icon-bar_borders .icon-bar_title-wrapper .icon-bar_title-item .icon-bar_title {
           white-space: nowrap;
           font-family: 'Futura';
           top: 70px;
