remove old home file

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -202,6 +202,8 @@ header {
 	}
 }
 
+// To delete everyting below this line ASAP
+
 // @media screen 
 //   and (min-device-width: 1200px) 
 //   and (min-device-width: 1600px) 
