--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -41,7 +41,7 @@ $xlarge-breakpoint: em(1920) !default;
     @media only screen and (max-width: $small-breakpoint) { @content; }
   }
   @else if $media == medium-screens {
-    @media only screen and (min-width: $medium-breakpoint) and (max-width: $large-breakpoint) { @content; }
+    @media only screen and (min-width: $small-breakpoint) and (max-width: $large-breakpoint) { @content; }
   }
   @else if $media == wide-screens {
     @media only screen and (min-width: $large-breakpoint) { @content; }
@@ -234,10 +234,12 @@ footer {
 		// To Add mobile styles when Rosa completes them
 	}
 	@include respond-to(medium-screens) {
-		width: 60%;
+		// width: 60%;
+		max-width: 760px;
 	}
 	@include respond-to(wide-screens) {
-		width: 65%;
+		// width: 65%;
+		max-width: 1250px;
 	}
 	&__wrapper {
 		float: left;
@@ -263,20 +265,24 @@ footer {
 		}
 	}
 	&__category {
+		font: 1em $body-font;
 		position: absolute;
+		margin: 10px 0 0 5px;
 	}
 	&__title {
-
+		font: 1.2em $header-font;
+		position: absolute;
+		margin: 30px 0 0 5px;
 	}
 	&__video {
 		width: 100%;
-		height: 80%;
+		height: 75%;
 	}
 	&__description {
 		position: relative;
 		width: 100%;
 		background-color: $light-grey;
-		height: 20%;
+		height: 25%;
 		bottom: 0%;
 		@include respond-to(handhelds) {
 			// To Add mobile styles when Rosa completes them
@@ -285,7 +291,7 @@ footer {
 			font-size: 0.7em;
 		}
 		@include respond-to(wide-screens) {
-			font-size: 1em;
+			font-size: 1.2em;
 		}
 		p {
 			padding: 5px 10px 5px 10px;
@@ -295,17 +301,28 @@ footer {
 		float: left;
 		position: relative;
 		bottom: 0%;
-		height: 10px;
+		height: 2%;
 		width: 100%;
 		background-color: $blue;
+		&:after {
+			content: "";
+			width: 50%;
+			float: right;
+			height: 100%;
+			background-color: $yellow;
+		}
+		&--full-pink {
+			background-color: $pink;
+			&:after {
+				background-color: $pink;
+			}
+		}
+		&--half-pink {
+			background-color: $pink;
+		}
 	}
-	&__color-strip:after {
-		content: "";
-		width: 50%;
-		float: right;
-		height: 10px;
-		background-color: $yellow;
-	}
+
+
 }
 
 
