--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -21,6 +21,7 @@ $img-path: '../imgs/';
 $logo-dark: 'TAG_logo_tag_black_blacktag.png';
 $logo-light: 'TAG_white_1920x1080.png';
 $homepage-bg: 'TAG-The-Agency-website-homepage-bg.png';
+$home-icon: 'TAG The Agency website case studies buttons-56.png';
 $blue: #00AEEF;
 $pink: #EC008C;
 $yellow: #FFF200;
@@ -62,18 +63,26 @@ $xlarge-breakpoint: em(1920) !default;
 // }
 // @include respond-to(wide-screens) {
 // }
-
-p {
-	font-family: $body-font;
-	margin: 0 0 0 0;
-}
-
-html, body {
+html, body, header, main, footer {
 	overflow: hidden;
 	margin: 0 0 0 0;
 	box-sizing: border-box;
 	height: 100%;
 }
+
+h1, h2, h3, p {
+	margin: 0 0 0 0;
+	padding: 0 0 0 0;
+}
+
+h1, h2, h3 {
+	font-family: $header-font;
+}
+
+p {
+	font-family: $body-font;
+}
+
 
 header, main, footer {
 	position: fixed;
@@ -120,10 +129,12 @@ footer {
 }
 
 .nav-top {
+	text-transform: uppercase;
 	color: white;	
 	height: 100%;
 	font-family: $body-font;
 	font-size: 1.4em;
+	white-space: nowrap;
 	&__menu {
 		@include flex-wrapper;
 		margin: 0 20px 0 0;
@@ -321,9 +332,83 @@ footer {
 			background-color: $pink;
 		}
 	}
-
-
 }
+
+.copy {
+	float: right;
+	height: 90%;
+	margin: 0 40px 0 0;
+	h1 {
+		font-size: 2.7em;
+		margin: 0 0 30px 0;
+	}
+	h2 {
+		margin: 60px 0 0 0;
+	}
+	p {
+		margin: 0 0 30px 0;
+	}
+	@include respond-to(handhelds) {
+		// To Add mobile styles when Rosa completes them
+	}
+	@include respond-to(medium-screens) {
+		width: 350px;
+	}
+	@include respond-to(wide-screens) {
+		width: 450px;
+		font-size: 1.2em;
+	}
+}
+
+.icons {
+	float: right;
+	position: relative;
+	height: 10%;
+	margin: 0 40px 0 0;
+	@include respond-to(handhelds) {
+		// To Add mobile styles when Rosa completes them
+	}
+	@include respond-to(medium-screens) {
+		width: 350px;
+	}
+	@include respond-to(wide-screens) {
+		width: 450px;
+	}
+	&__icon {
+		width: 15%;
+		padding-bottom: 15%;
+	}
+	&__image {
+		width: 100%;
+		padding-bottom: 100%;
+		cursor: pointer;
+		// height: 100%;
+		background-size: contain;
+		background-position: left;
+		background-repeat: no-repeat;
+		transition-duration: 1s;
+		&--home {
+			background-image: url($img-path + $home-icon);
+		}
+		&:hover {
+			-ms-transform: rotate(180deg); /* IE 9 */
+		    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+		    transform: rotate(180deg);
+		}
+	}
+	&__text {
+		text-transform: uppercase;
+		font-family: 'Futura';
+		font-weight: bold;
+		width: 100%;
+		text-align: center;
+		top: 100%;
+		margin: 10px 0 0 0;
+	}
+}
+
+
+
 
 
 
